--- a/contactus.html
+++ b/contactus.html
@@ -48,19 +48,19 @@
         <h1>Submission Form</h1>
         <form>
           <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required>
+          <input type="text1" id="name" name="name" required>
   
           <label for="email">Email:</label>
           <input type="email" id="email" name="email" required>
   
           <label for="new-tree-name">New Bonsai Tree Name:</label>
-          <input type="text" id="new-tree-name" name="new-tree-name" required>
+          <input type="text1" id="new-tree-name" name="new-tree-name" required>
   
           <label for="description">Description:</label>
           <textarea id="description" name="description" required></textarea>
   
           <label for="related-resource">Related Resource (optional):</label>
-          <input type="text" id="related-resource" name="related-resource">
+          <input type="text1" id="related-resource" name="related-resource">
   
           <input type="submit" value="Submit" onclick="message()">
         </form>
