--- a/FAQ.html
+++ b/FAQ.html
@@ -43,6 +43,18 @@
   <h2>
     Bonsai trees are planted in small pots with minimal water and nutrient reserves! In order to keep your Bonsai healthy you need to water and fertilize regularly. They require lots of water, light, and fertilizer in order to really thrive! 
   </h2>
+  <h3>
+    Placement
+  </h3>
+  <p>
+    Several factors need to be taken into consideration when determinding the best spot to place your Bonsai. For example, local climate, time of the year and much more! One of the biggest pieces of information to understand about your Bonsai is knowing if it's an indoor or outdoor tree. 
+  </p>
+  <h3>
+    Watering
+  </h3>
+  <p>
+    This is the most important piece in making sure your Bonsai stays healthy. How often it needs water depends on the species, size, time of year, soil-mixure, and climate so it is very important to be paying close attention 
+  </p>
   <h1>
     Growing and Cultivating 
   </h1>
@@ -55,6 +67,7 @@
   <h2>
     Bonsai trees are normal planets that are propagated like any other, however, they are trained using sophisicated techniques that keep them smaller. 
   </h2>
+  <
   <h1>
     Popular Tree Species
   </h1>
