--- a/FAQ.html
+++ b/FAQ.html
@@ -36,7 +36,7 @@
 </nav>
 
 <section style="margin-top:3em;margin-right:4em;" class="button-containter">
-  <button class="accordion">Portrait</button>
+  <button class="accordion">Bonsai Tree Care</button>
   <div class="panel portrait">
       <p>Portrait photography, often known as portraiture, is self-explanatory, much like any other photography speciality. So, what distinguishes it?</p>
       <p>When photographing people, it's important to tell their stories. What distinguishes them from others? What are their most distinguishing personality characteristics?</p>
@@ -73,7 +73,6 @@
       </div>
   </section>
 
-  */ javascript */
   <script>
     function openNav() {
   document.getElementById("mySidenav").style.width = "250px";
