--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
         Did you know that bonsai trees originated in China, NOT Japan?<br>
         Or that they symbolize harmony and good luck in some cultures?<br>
         Or that the oldest bonsai tree is over 1,000 years old?<br></p>
-        <button class="overall">
+        <button class="information">
           <a href="information.html">Learn more</a>
         </button>
       </div>
