--- a/information.html
+++ b/information.html
@@ -23,12 +23,8 @@
   <nav class="stripe menubar">
       <div class="content_container">
         <ul>
-<<<<<<< HEAD
           <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" 
-            href="index.html">Bonsai</a></span></li>
-=======
-          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="home.html">Bonsai</a></span></li>
->>>>>>> d2c0032ab6d09dcb6436d97c4f5dcbba99f236af
+            href="home.html">Bonsai</a></span></li>
           <li><a href="information.html">INFORMATION</a></li>
           <li><a href="FAQ.html">FAQ</a></li>
           <li><a href="contactus.html">CONTACT US</a></li>
@@ -43,16 +39,16 @@
 
   <div class="stripe introduction">
     <div class="content_container">
-    <h1><b>Information<br> More about Bonsai</b></h1>
+    <h1>More about Bonsai</h1>
   </div>
   </div>
 
   <div class="stripe message">
     <div class="content_container">
-    <p>
+    <h2>
       If you find yourself overwhelemd with the abundance of information on bonsai due to its long history, 
       take a breather and check out the photo slideshows below to gain a deeper understanding of bonsai and its care requirements.
-    </p>
+    </h2>
   </div>
   </div>
 
@@ -62,7 +58,7 @@
       <div class="slideshow-container">
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
-            <div class="numbertext">1/5</div>
+            <div class="numbertext">1/7</div>
             <img src="images/bonsai-house.jpeg" style="width:100%" alt="Bonsai in front of an old house">
             <div class="text">The ultimate goal of growing a Bonsai is to create a miniaturized but 
               realistic representation of nature encapsulated within a tree. It's noteworthy that 
@@ -71,7 +67,7 @@
             </div>
         </div>
         <div class="mySlides fade">
-            <div class="numbertext">2/5</div>
+            <div class="numbertext">2/7</div>
             <img src="images/bonsai-inside.jpeg" style="width:100%" alt="Bonsai inside a home">
             <div class="text">The art of Bonsai offers a plethora of styles to choose from, 
               and they can be categorized in various ways. However, for the sake of establishing a solid foundation, 
@@ -79,25 +75,49 @@
               This tree is in the Slanting Style - shakan. </div>
         </div>
         <div class="mySlides fade">
-            <div class="numbertext">3/5</div>
+            <div class="numbertext">3/7</div>
             <img src="images/bonsai-straight.jpeg" style="width:100%" alt="Small straight bonsai">
             <div class="text">This particular Bonsai tree showcases the Informal Upright Style - Moyogi. 
               It is the most popular Bonsai styles which depicts a tree in a natural setting, 
-              having endured the forces of nature; therefore has a twisted trunk and sag branches. 
-              Other basic  styles include the Formal Upright Style - Chokan, which portrays a tree growing naturally in an open area without any physical stress. 
-              The Semi-Cascade Style, known as Han-Kengai, and the Full Cascade Style - Kengai, feature trees that appear 
-              to be hanging from the side of a cliff, either by the seashore or a riverbank.</div>
+              having a twisted trunk and sag branches after enduring the forces of nature. 
+              Other basic  styles include the Formal Upright Style - Chokan, which portrays a tree growing naturally 
+              in an open area without any physical stress. 
+              </div>
         </div>
         <div class="mySlides fade">
-            <div class="numbertext">4/5</div>
-            <img src="images/bonsai-unique.jpeg" style="width:100%" alt="A unique bonsai">
-            <div class="text">A unique bonsai</div>
+            <div class="numbertext">4/7</div>
+            <img src="images/bonsai-cascade.jpeg" style="width:100%" alt="A cascade-style bonsai">
+            <div class="text">The Full Cascade Style and the Semi-Cascade Style feature trees that 
+              appear to be hanging from the side of a cliff, either by the seashore or a riverbank. With the former, 
+              known as kengai in Japanese, the apex of the tree extends below the container that the plant is growing in.
+              Trees in the latter category, known as han-kengai, extend below the top of the container, 
+              but the apex doesn't extend below the base.</div>
         </div>
         <div class="mySlides fade">
-          <div class="numbertext">5/5</div>
-          <img src="images/bonsai-unique.jpeg" style="width:100%" alt="A unique bonsai">
-          <div class="text">A unique bonsai</div>
+          <div class="numbertext">5/7</div>
+          <img src="images/bonsai-pruning.jpeg" style="width:100%" alt="Hands pruning a bonsai">
+          <div class="text">Growing bonsai trees involves controlling their shape by bending branches or cutting them off, 
+            which may seem harsh, but it's crucial for their health. However, trees have a life of their own and grow naturally, 
+            so we can't control them completely. Instead of forcing them to conform, we should appreciate and respect 
+            their individuality.</div>
       </div>
+      <div class="mySlides fade">
+        <div class="numbertext">6/7</div>
+        <img src="images/bonsai-watered.jpeg" style="width:100%" alt="A bonsai has just been watered">
+        <div class="text">In addition to the aesthetic aspect, bonsai growing also provides a sense of 
+          responsibility and care for living things. Each tree has its own unique character and needs, 
+          and it's the responsibility of the grower to provide the necessary care and attention to keep the tree 
+          healthy and thriving.</div>
+      </div>
+      <div class="mySlides fade">
+        <div class="numbertext">7/7</div>
+        <img src="images/bonsai-grow.jpeg" style="width:100%" alt="A garden of bonsais">
+        <div class="text">Bonsai, unlike most other forms of art, are never truly "complete" as long as the trees 
+          are still thriving and developing, requiring constant care and attention. This is why bonsai cultivation 
+          is often referred to as an art that never truly ends. However, for many enthusiasts, it is precisely 
+          this everlasting nature that makes nurturing bonsai so fulfilling and valuable.</div>
+      </div>
+
         <!-- Next and previous buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -110,9 +130,25 @@
         <span class="dot" onclick="currentSlide(3)"></span>
         <span class="dot" onclick="currentSlide(4)"></span>
         <span class="dot" onclick="currentSlide(5)"></span>
+        <span class="dot" onclick="currentSlide(6)"></span>
+        <span class="dot" onclick="currentSlide(7)"></span>
     </div>
 </div>
-  </div>
+</div>
+
+<div class="stripe resource">
+  <div class="content_container">
+  <h2>
+    Here are more resources about bonsai for you to explore:
+  </h2>
+  <a href="https://www.bonsaiempire.com/" class="button">Bonsai Empire</a>
+  <a href="https://bonsaimirai.com/" class="button">Bonsai Mirai</a>
+  <a href="https://www.bonsai-bci.com/" class="button">Bonsai Clubs International</a>
+  <a href="https://www.bonsai-nbf.org/" class="button">The National Bonsai Foundation</a>
+  <a href="https://crataegus.com/" class="button">Crataegus Bonsai</a>
+  <p>Image sources: <a href="https://unsplash.com/">Unsplash</a> and <a href="https://www.pexels.com/">Pexels</a></p>
+</div>
+</div>
 
   <button onclick="topFunction()" id="top" title="Go to top">Top</button>
   <footer class="footer">
