--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
   </div>
   </div>
 
-  <div class="stripe history">
+  <div class="stripe history" id="overall">
     <div class="content_container">
       <div class="overall">
         <h2>Information</h2>
@@ -65,7 +65,7 @@
   </div>
   </div>
 
-  <div class="stripe features" id="overall">
+  <div class="stripe features">
     <div class="content_container">
       <h2>FAQ</h2>
     </div>
