--- a/FAQ.html
+++ b/FAQ.html
@@ -37,17 +37,14 @@
 
 <section style="margin-top:3em;margin-right:4em;" class="button-containter">
   <button class="accordion">Bonsai Tree Care</button>
-  <div class="panel portrait">
-      <p>Portrait photography, often known as portraiture, is self-explanatory, much like any other photography speciality. So, what distinguishes it?</p>
-      <p>When photographing people, it's important to tell their stories. What distinguishes them from others? What are their most distinguishing personality characteristics?</p>
-      <p>You must emphasize their best characteristics and accurately express their personality. Interesting positions are important, as are the eyes. Good lighting, an appropriate focus length, and a clean background are the most important aspects of high-quality portrait photography. A shallow depth of field can also be used to bring your subjects into sharp focus.</p>
-      <p>Objects in the background can provide additional context. A guitar, a basketball hoop, an easel, or anything else pertinent to the plot can be added, for example.</p>
-      <p>There are numerous sub-types of portrait photography, allowing you to delve further into the discipline. You can experiment with family photos, marriage portraiture, fashion photography, glamour photography, surreal portraits, and other specialist areas.</p>
-  </div>
+  <div class="panel bonsai tree care">
+      <p>Bonsai trees are planted in small pots with minimal water and nutrient reserves! In order to keep your Bonsai healthy you need to water and fertilize regularly. They require lots of water, light, and fertilizer in order to really thrive!</p>
+      <p>Determining where the best spot for your Bonsai is a tough task, however, there are many different factors that need to be taken into consideration such as the climate and time of year.</p>
+      <p>Watering is the most important part of taking care of your Bonsai but is often overlooked. How often your Bonsai needs water is determined by the size of the tree, size of its pot, the time of year, type of soil-mixture, and the local climate. </p>
+      <p>In order for your Bonsai to survive, fertilizing reguarly is cruical. </p>
 
-
-      <button class="accordion">Event</button>
-      <div class="panel event">
+      <button class="accordion">Growing and Cultiviating</button>
+      <div class="panel growing and cultiviating">
           <p>This area of photography may be a lot of fun. You can photograph at a variety of occasions, including concerts, birthday parties, weddings, anniversaries, corporate events, and more.</p>
           <p>There is a desire to work at a variety of events. You can, however, specialize if you so desire. Simply limit yourself to working only one sort of event, such as weddings.</p>
           <p>The point is that all events have two things in common: they are fast-paced and cover a wide range of topics. They can even be a little difficult. You may need to photograph food, the location, and other items in addition to portraits and group photographs. You can easily integrate your other specialist photographic interests.</p>
@@ -56,16 +53,16 @@
       </div>
 
 
-      <button class="accordion">Food</button>
-      <div class="panel food">
+      <button class="accordion">Styling</button>
+      <div class="panel styling">
           <p>Simply put, it consists of food photos. Is that it, though? No, no, no. Food photography, like any other genre of photography, is an art form that can be utilized to give food fresh life or a whole new dimension. It can also be utilized for commercial purposes such as advertising and marketing.</p>
           <p>Traditional food photography, also known as tabletop still life or the style seen in cookbooks and food magazines, employs closeup, slightly overhead angles, and is frequently backlit with a shallow depth of field to bring out the texture of the food in a dining room or kitchen setting, usually accompanied by traditional kitchenware props. Contemporary food photography, on the other hand, is considerably broader and more creative, and can incorporate any combination of innovative styling and lighting approaches.</p>
           <p>The goal of practically all food photography, regardless of its form, is to make the food in the image appealing and appealing. Photography editorials, for example, may occasionally include unappealing cuisine for shock value.</p>
           <p>Professional food photography is more than just for Instagram; it's a serious business. Food photography is used in menus and ads by restaurants. Food photography is often utilized for food packaging and other purposes. It is possible to make a lot of money in this field.</p>
       </div>
 
-      <button class="accordion">Wildlife</button>
-      <div class="panel wildlife">
+      <button class="accordion">Popular Tree Species</button>
+      <div class="panel popular tree species">
           <p>Wildlife photography encompasses a wide range of wild and natural images. Without a doubt, it is one of the most difficult forms of photography. It's also one of the most exciting subcultures, as it may produce truly magnificent images.</p>
           <p>What makes it so difficult? Because an animal cannot be forced to pose for a photograph. To capture it and communicate its narrative, you must wait until the right moment. This could entail sitting in one place for hours-or even days!</p>
           <p>There will be instances when you have a brief window of opportunity to capture some beautiful moments. A passing animal may pause long enough for you to capture a memorable photograph. You must, however, be prepared for those fleeting times.</p>
