--- a/FAQ.html
+++ b/FAQ.html
@@ -41,8 +41,7 @@
       <p>Bonsai trees are planted in small pots with minimal water and nutrient reserves! In order to keep your Bonsai healthy you need to water and fertilize regularly. They require lots of water, light, and fertilizer in order to really thrive!</p>
       <p>Determining where the best spot for your Bonsai is a tough task, however, there are many different factors that need to be taken into consideration such as the climate and time of year.</p>
       <p>Watering is the most important part of taking care of your Bonsai but is often overlooked. How often your Bonsai needs water is determined by the size of the tree, size of its pot, the time of year, type of soil-mixture, and the local climate. </p>
-      <p>In order for your Bonsai to survive, fertilizing reguarly is cruical. </p>
-
+      <p>In order for your Bonsai to survive, fertilizing reguarly is cruical. </p></div>
       <button class="accordion">Growing and Cultiviating</button>
       <div class="panel growing and cultiviating">
           <p>This area of photography may be a lot of fun. You can photograph at a variety of occasions, including concerts, birthday parties, weddings, anniversaries, corporate events, and more.</p>
