--- a/contactus.html
+++ b/contactus.html
@@ -44,6 +44,7 @@
   </div>
 
 <main>
+ <!-- form input -->
     <div class="form-container";>
         <h1>Submission Form</h1>
         <form>
@@ -61,14 +62,17 @@
   
           <label for="related-resource">Related Resource (optional):</label>
           <input type="text1" id="related-resource" name="related-resource">
-  
+          
+          <!-- submit button -->
           <input type="submit" value="Submit">
         </form>
       </div>
 </main>
 
+<!-- top button -->
 <button onclick="topFunction()" id="top" title="Go to top">Top</button>
 
+<!-- footer -->
   <footer class="footer">
     <div class="footer1">
       <p class="logoend" href="home.html"><a>Bonsai</a></p>
@@ -106,16 +110,6 @@
       });
   </script>
 
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
