--- a/information.html
+++ b/information.html
@@ -37,6 +37,7 @@
       </div>
   </nav>
 
+  <!-- Stripe introduction-->
   <div class="stripe introduction">
     <div class="content_container">
     <h1>More about Bonsai</h1>
@@ -47,7 +48,7 @@
   </div>
   </div>
 
-  <div class="stripe slide">
+  <div class="slide">
     <div class="content_container"> 
       <!-- Slideshow container -->
       <div class="slideshow-container">
@@ -131,7 +132,8 @@
 </div>
 </div>
 
-<div class="stripe resource">
+<!-- Resources section-->
+<div class="resource">
   <div class="content_container">
   <h2>
     Here are more resources about bonsai for you to explore:
@@ -145,7 +147,7 @@
 </div>
 </div>
 
-  <button onclick="topFunction()" id="top" title="Go to top">Top</button>
+  <button onclick="topFunction()" id="top" title="Go to top">Top</button> <!-- Button to scroll to top-->
   <footer class="footer">
     <div class="footer1">
       <p class="logoend" href="home.html"><a>Bonsai</a></p>
@@ -160,18 +162,6 @@
     </div>
   </footer>
 
-
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-    
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
