--- a/FAQ.html
+++ b/FAQ.html
@@ -34,6 +34,12 @@
       </ul>
     </div>
 </nav>
+<div class="stripe introduction">
+  <div class="content_container">
+  <h1><b>FAQ</b></h1><br>
+  <h2>Explore cool fact about bonsai!</h2>
+</div>
+</div>
 
 <section style="margin-top:3em;margin-right:4em;" class="button-containter">
   <button class="accordion">Bonsai Tree Care</button>
