--- a/FAQ.html
+++ b/FAQ.html
@@ -50,28 +50,23 @@
       <p>In order for your Bonsai to survive, fertilizing reguarly is cruical. </p></div>
       <button class="accordion">Growing and Cultiviating</button>
       <div class="panel growing and cultiviating">
-          <p>This area of photography may be a lot of fun. You can photograph at a variety of occasions, including concerts, birthday parties, weddings, anniversaries, corporate events, and more.</p>
-          <p>There is a desire to work at a variety of events. You can, however, specialize if you so desire. Simply limit yourself to working only one sort of event, such as weddings.</p>
-          <p>The point is that all events have two things in common: they are fast-paced and cover a wide range of topics. They can even be a little difficult. You may need to photograph food, the location, and other items in addition to portraits and group photographs. You can easily integrate your other specialist photographic interests.</p>
-          <p>It all boils down to seizing once-in-a-lifetime opportunities. These are the memorable moments that the guests will remember for the rest of their lives. They will be able to revisit the events and remember how much fun they had.</p>
-          <p>Isn't there any pressure? To be honest, your first gig will be a little stressful until you get the feel of it. Halfway through the event, you'll forget about the stress. It will become second nature to you in no time. The most fascinating aspect of this form of specialized photography is that you deal with people who genuinely want you to photograph them. That is extremely enjoyable and gratifying.</p>
+          <p> When growing from a seed it takes at least five years of growing before your Bonsai will resemble a tree. Buying one from a nursey will result in you being able to style it right away!</p>
+          <p>If you chose to start your Bonsai growing journey it allowes you to expereince the fun of shaping your own tree! You can grow a Bonsai from either seeds, cuttings, or buying Bonsai nursery stock!</p>
+          <p>When just starting out you may want to opt for buying a Bondai tree so that you are able to foster your abilites to learn to care for this specific plant</p>
       </div>
 
 
       <button class="accordion">Styling</button>
       <div class="panel styling">
-          <p>Simply put, it consists of food photos. Is that it, though? No, no, no. Food photography, like any other genre of photography, is an art form that can be utilized to give food fresh life or a whole new dimension. It can also be utilized for commercial purposes such as advertising and marketing.</p>
-          <p>Traditional food photography, also known as tabletop still life or the style seen in cookbooks and food magazines, employs closeup, slightly overhead angles, and is frequently backlit with a shallow depth of field to bring out the texture of the food in a dining room or kitchen setting, usually accompanied by traditional kitchenware props. Contemporary food photography, on the other hand, is considerably broader and more creative, and can incorporate any combination of innovative styling and lighting approaches.</p>
-          <p>The goal of practically all food photography, regardless of its form, is to make the food in the image appealing and appealing. Photography editorials, for example, may occasionally include unappealing cuisine for shock value.</p>
-          <p>Professional food photography is more than just for Instagram; it's a serious business. Food photography is used in menus and ads by restaurants. Food photography is often utilized for food packaging and other purposes. It is possible to make a lot of money in this field.</p>
+          <p>Bonsai trees are normal planets that are propagated like any other, however, they are trained using sophisicated techniques that keep them smaller.</p>
+          <p> The styping of Bonsai trees include methods such as regular pruning and wiring, while also including more advanced techniques like creation of deadwood!</p>
       </div>
 
       <button class="accordion">Popular Tree Species</button>
       <div class="panel popular tree species">
-          <p>Wildlife photography encompasses a wide range of wild and natural images. Without a doubt, it is one of the most difficult forms of photography. It's also one of the most exciting subcultures, as it may produce truly magnificent images.</p>
-          <p>What makes it so difficult? Because an animal cannot be forced to pose for a photograph. To capture it and communicate its narrative, you must wait until the right moment. This could entail sitting in one place for hours-or even days!</p>
-          <p>There will be instances when you have a brief window of opportunity to capture some beautiful moments. A passing animal may pause long enough for you to capture a memorable photograph. You must, however, be prepared for those fleeting times.</p>
-          <p>In wildlife photography, the phrase "patience is a virtue" takes on a whole new meaning. This photography genre may be great for you if you enjoy animals and have a lot of patience. You can also travel to some beautiful regions of the globe.</p>
+          <p>Each Bonsai tree has specific requirements for its training, cultivation, and care! Knowinf which Bonsai tree you have will be crical in ensuring you are providing it with proper care!</p>
+          <p>The most popular tree species are the Ficus and Juniper! </p>
+          <p>
       </div>
   </section>
 
