--- a/home.html
+++ b/home.html
@@ -97,6 +97,13 @@
          </a>
           </button>
         </div>
+        <div class="feature_item category5">
+          <button>
+            <a href="FAQ.html">
+           <h3>Popular tree species</h3>
+         </a>
+          </button>
+        </div>
     </div>
     </div>
   </div>
