--- a/information.html
+++ b/information.html
@@ -155,7 +155,7 @@
     </div>
     <div class="footer2">
       <p class="footer2">
-        Written by Kaia Nguyen, Khanh Mai, Ngoc Uong and Rachel Farvel. <br>
+        Written by Kaia Nguyen, Khanh Mai, Ngoc Uong and Rachel Farver. <br>
         At Miami University, Oxford, Ohio, USA. <br> 
         &copy; Art of Bonsai, 2023
       </p>
