--- a/home.html
+++ b/home.html
@@ -100,7 +100,7 @@
         <div class="feature_item category5">
           <button>
             <a href="FAQ.html">
-           <h3>Popular tree species</h3>
+           <h3>Bonsai for beginner</h3>
          </a>
           </button>
         </div>
