--- a/FAQ.html
+++ b/FAQ.html
@@ -68,6 +68,15 @@
           <p>The most popular tree species are the Ficus and Juniper! </p>
           <p>
       </div>
+      <button class="accordion">Best Bonsai for Beginners</button>
+      <div class="panel best bonsai for beginners">
+          <p>When picing your tree it is very important that you pick the correct species. Tropical and sub-tropical tree species can be kept indoors, however, temperature trees can only be grown outside.</p>
+          <p>Choice #1: Ficus! This is the most popular indoor Bonsai because it is a very resilent tree with very beautiful leaves!</p>
+          <p>Choice #2: Dwarf Jade! This is the easiest indoor Bonsai to take care of. The tree is a succulent, and can survive periods of drought due to it storing water in its leaves. </p>
+          <p>Choice #3: Juniper! This is the most popular outdoor Bonsai because it stands out against nature and it is very afforable for beginners.</p>
+          <p>Choice #4: Japanese Maple! This tree is known for its beautiful fall colors, but needs winter protection!</p>
+          <p>Overall, it comes down to where your Bonsai will be kept that impacts which one you should get! However, all of these are great options!</p>
+      </div>
   </section>
 
   <script>
