--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
         <div class="feature_item category2">
           <button>
             <a href="FAQ.html">
-           <h3>Growing and cultivating</h3>
+           <h3>Growing/cultivating</h3>
          </a>
           </button>
         </div>
