--- a/FAQ.html
+++ b/FAQ.html
@@ -43,7 +43,7 @@
 
 <section style="margin-top:3em;margin-right:4em;" class="button-containter">
   <button class="accordion">Bonsai Tree Care</button>
-  <div class="panel bonsai tree care">
+  <div class="panel bonsai-tree-care">
       <p>Bonsai trees are planted in small pots with minimal water and nutrient reserves! In order to keep your Bonsai healthy you need to water and fertilize regularly. They require lots of water, light, and fertilizer in order to really thrive!</p>
       <p>Determining where the best spot for your Bonsai is a tough task, however, there are many different factors that need to be taken into consideration such as the climate and time of year.</p>
       <p>Watering is the most important part of taking care of your Bonsai but is often overlooked. How often your Bonsai needs water is determined by the size of the tree, size of its pot, the time of year, type of soil-mixture, and the local climate. </p>
@@ -63,13 +63,13 @@
       </div>
 
       <button class="accordion">Popular Tree Species</button>
-      <div class="panel popular tree species">
+      <div class="panel popular-tree-species">
           <p>Each Bonsai tree has specific requirements for its training, cultivation, and care! Knowinf which Bonsai tree you have will be crical in ensuring you are providing it with proper care!</p>
           <p>The most popular tree species are the Ficus and Juniper! </p>
           <p>
       </div>
       <button class="accordion">Best Bonsai for Beginners</button>
-      <div class="panel best bonsai for beginners">
+      <div class="panel best-bonsai-for-beginners">
           <p>When picing your tree it is very important that you pick the correct species. Tropical and sub-tropical tree species can be kept indoors, however, temperature trees can only be grown outside.</p>
           <p>Choice #1: Ficus! This is the most popular indoor Bonsai because it is a very resilent tree with very beautiful leaves!</p>
           <p>Choice #2: Dwarf Jade! This is the easiest indoor Bonsai to take care of. The tree is a succulent, and can survive periods of drought due to it storing water in its leaves. </p>
