--- a/home.html
+++ b/home.html
@@ -108,6 +108,14 @@
     </div>
   </div>
 
+  <div class="stripe calculator">
+    <div class="content_container">
+      <h2>Tree age calculator</h2>
+      <div class="content_container page_grid">
+    </div>
+    </div>
+  </div>
+
 
   <button onclick="topFunction()" id="top" title="Go to top">Top</button>
   <footer class="footer">
