--- a/home.html
+++ b/home.html
@@ -108,10 +108,30 @@
     </div>
   </div>
 
-  <div class="stripe calculator">
+  <div class="stripe contents">
     <div class="content_container">
-      <h2>Tree age calculator</h2>
       <div class="content_container page_grid">
+        <div class="feature_item category1">
+          <button>
+            <a href="FAQ.html">
+            <h3>Bonsai tree care</h3>
+          </a>
+          </button>
+        </div>
+        <div class="feature_item category2">
+          <button>
+            <a href="FAQ.html">
+           <h3>Growing/cultivating</h3>
+         </a>
+          </button>
+        </div>
+        <div class="feature_item category3">
+          <button>
+            <a href="FAQ.html">
+           <h3>Styling</h3>
+         </a>
+          </button>
+        </div>
     </div>
     </div>
   </div>
