--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
   <div class="stripe features">
     <div class="content_container">
       <h2>FAQ</h2>
-      <div class="content_container page_grid">
+      <div class="content_container page_grid features">
         <div class="feature_item category1">
           <button>
             <a href="FAQ.html">
@@ -110,7 +110,7 @@
 
   <div class="stripe contents">
     <div class="content_container">
-      <div class="content_container page_grid">
+      <div class="content_container page_grid contents">
         <div class="feature_item category1">
           <button>
             <a href="FAQ.html">
